fixed errors and played with font sizes and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,9 @@ html {
   box-sizing: border-box;
   font-family: Georgia, serif;
   background-color: #f0eee8;
-  max-width: 22em;
-  font-size: 0.875rem;
-  line-height: 1.6;
+  max-width: 20em;
+  font-size: 1rem;
+  line-height: 1.4;
 }
 
 *, *::before, *::after {
@@ -13,13 +13,9 @@ html {
 
 h1 {
   font-family: "Dosis", sans-serif;
+  font-weight: bold;
   font-size: 1.5rem;
   text-decoration: none;
-  font-weight: bold;
-}
-
-p {
-  font-size: 1rem;
 }
 
 .link {
@@ -40,10 +36,10 @@ p {
   text-decoration: none;
 }
 
-h2 {
-  font-size: 1.125rem;
+.btn {
   display: inline-block;
-  font-weight: 900;
+  font-size: 1.125rem;
+  font-weight: bold;
   font-family: "Dosis", sans-serif;
   background-color: #785439;
   border: 2px solid #785439;
@@ -51,10 +47,12 @@ h2 {
   color: #f0eee8;
   text-align: center;
   padding: 0.5em 0.5em 0.5em;
+  margin-left: 4em;
 }
 
 .link-card dl {
   border: 2px solid #9a816d;
+  border-style: solid none solid none;
   padding: 0.9em 0.5em 0.9em;
 }
 
@@ -66,14 +64,22 @@ h2 {
   background-color: #cabdb2;
 }
 
-.btn:hover {
+li:hover .link {
+  background-color: #cabdb2;
+}
+
+li:hover .btn {
   background-color: #512200;
   border-color: #512200;
 }
 
+dl {
+  font-size: 0.875rem;
+}
+
 dt {
   display: inline-block;
-  width: 6em;
+  width: 8em;
 }
 
 dd {
